--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -78,7 +78,7 @@
     <p>Contact us at <a href="https://hiitambala.com/">HIIT-TRAVELERS.COM</a></p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="Script.js"></script>
 </body>
 </html>
 
